@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.152 2006/01/07 20:04:10 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: gplt_x11.c,v 1.153 2006/02/01 20:33:04 sfeam Exp $"); }
 #endif
 
 #define X11_POLYLINE 1
@@ -5877,7 +5877,6 @@ pr_exportselection()
 
 /* bit of a bodge, but ... */
 static struct plot_struct *exported_plot;
-static int export_interlock = 0;  /* One bit each for bitmap and colormap */
 
 static void
 export_graph(struct plot_struct *plot)
@@ -5888,8 +5887,8 @@ export_graph(struct plot_struct *plot)
     /* to check we have selection, we would have to do a
      * GetSelectionOwner(), but if it failed, it failed - no big deal
      */
-    exported_plot = plot;
-    export_interlock |= 3;
+    if (! *selection)
+	exported_plot = plot;
 }
 
 static void
@@ -5913,17 +5912,20 @@ handle_selection_event(XEvent *event)
 	    reply.xselection.property = event->xselectionrequest.property;
 	    reply.xselection.time = event->xselectionrequest.time;
 
-	    FPRINTF((stderr, "selection request target: %d\n", reply.xselection.target));
-
-	    if (reply.xselection.target == XA_TARGETS && export_interlock & 1) {
+	    if (reply.xselection.target == XA_TARGETS) {
 		static Atom targets[] = { XA_PIXMAP, XA_COLORMAP };
+		static Atom mousecoord[] = { XA_STRING };
 
 		FPRINTF((stderr, "Targets request from %d\n", reply.xselection.requestor));
 
-		XChangeProperty(dpy, reply.xselection.requestor,
+		if (*selection)
+		    XChangeProperty(dpy, reply.xselection.requestor,
+				reply.xselection.property, reply.xselection.target,
+				32, PropModeReplace, (unsigned char *) (mousecoord), 1);
+		else if (exported_plot)
+		    XChangeProperty(dpy, reply.xselection.requestor,
 				reply.xselection.property, reply.xselection.target,
 				32, PropModeReplace, (unsigned char *) targets, 2);
-		export_interlock &= ~1;
 	    } else if (reply.xselection.target == XA_COLORMAP) {
 
 		FPRINTF((stderr, "colormap request from %d\n", reply.xselection.requestor));
@@ -5931,24 +5933,26 @@ handle_selection_event(XEvent *event)
 		XChangeProperty(dpy, reply.xselection.requestor,
 				reply.xselection.property, reply.xselection.target,
 				32, PropModeReplace, (unsigned char *) &(default_cmap.colormap), 1);
-	    } else if (reply.xselection.target == XA_PIXMAP && export_interlock & 2) {
+	    } else if (reply.xselection.target == XA_PIXMAP && exported_plot) {
 
 		FPRINTF((stderr, "pixmap request from %d\n", reply.xselection.requestor));
 
 		XChangeProperty(dpy, reply.xselection.requestor,
 				reply.xselection.property, reply.xselection.target,
 				32, PropModeReplace, (unsigned char *) &(exported_plot->pixmap), 1);
-		export_interlock &= ~2;
+		exported_plot = NULL;
 #ifdef PIPE_IPC
-	    } else if (reply.xselection.target == XA_STRING) {
+	    } else if (reply.xselection.target == XA_STRING && *selection) {
 		FPRINTF((stderr, "XA_STRING request\n"));
 		XChangeProperty(dpy, reply.xselection.requestor,
 				reply.xselection.property, reply.xselection.target,
 				8, PropModeReplace, (unsigned char *) selection, strlen(selection));
+		*selection = '\0';
 #endif
 	    } else {
+		FPRINTF((stderr, "selection request target: %d\n", reply.xselection.target));
 		reply.xselection.property = None;
-		if (!export_interlock)
+		if (!exported_plot && ! *selection)
 		    /* We have now satisfied the select request. Say goodbye */
 		    XSetSelectionOwner(dpy, EXPORT_SELECTION, None, CurrentTime);
 	    }
